--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,79 +1,24 @@
-executors:
-  node:
-    docker:
-      - image: circleci/node:12.10
-
-aliases:
-  restore_cache: &restore_cache
-    restore_cache:
-      name: Restore Npm Package Cache
-      keys:
-        - yarn-cache-netlify-{{ checksum "yarn.lock" }}
-  
-  install_node_modules: &install_node_modules
-    run:
-      name: Install dependencies
-      command: yarn
-      
-  save_cache: &save_cache
-    save_cache:
-      name: Save NPM package cache
-      key: yarn-cache-netlify-{{ checksum "yarn.lock" }}
-      paths:
-        - ./node_modules      
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
 version: 2.1
 jobs:
-  test:
-    # executor: node
-    # steps:
   build:
-    executor: node
+    docker:
+      - image: circleci/node:12.10
     steps:
       - checkout
-      - <<: *restore_cache
-      - <<: *install_node_modules
-      - run: 
-          name: Build
-          command: yarn build
-
+      - run: yarn build
   deploy:
-    executor: node
+    docker:
+      - image: circleci/node:12.10
     steps:
       - checkout
-      - attach_workspace:
-          at: ./
-      - <<: *restore_cache
-      - <<: *install_node_modules
-      - run:
-          name: Install netlify-cli
-          command: sudo npm install -g --silent netlify-cli
-      - run: 
-          name: Deploy to Netlify
-          command: netlify deploy --dir=./public -p
+      - run: sudo npm install -g --silent netlify-cli
+      - run: netlify deploy --dir=./public -p
 
 
 workflows:
   version: 2.1
   build_and_deploy:
     jobs:
-      # - test:
-      #     filters:
-      #       branches:
-      #         ignore:
-      #           - gh-pages
-      - build:
-          # requires:
-          #   - test
-      - deploy:
-          requires:
-            - build
-          # filters:
-          #   branches:
-          #     only: master
+      - build
+      - deploy
 
