Change package manager to npm

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
       - image: circleci/node
     steps:
       - checkout
-      - run: yarn build
+      - run: npm run-script build
   deploy:
     docker:
-      - image: circleci/node:12.10
+      - image: circleci/node
     steps:
       - checkout
       - run: sudo npm install -g --silent netlify-cli
