Add build during deploy as well

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: npm run-script build
       - run: sudo npm install -g --silent netlify-cli
       - run: netlify deploy --dir=./public -p
 
