Resuse Yarn to avail build caching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,27 +6,22 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run: npm install
-      - run: npm run-script build
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+      - run: yarn
+      - run: yarn build
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
-            - ./node_modules
+            - ~/.cache/yarn
   deploy:
     docker:
       - image: circleci/node
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}      
+          key: yarn-packages-{{ checksum "yarn.lock" }}
       - run: sudo npm install -g --silent netlify-cli
       - run: netlify deploy --dir=./public -p
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-
 
 workflows:
   version: 2.1
