--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,23 @@ jobs:
       - restore_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
       - run: yarn
-      - run: yarn build
       - save_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
+      - run: yarn build
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - public
+
   deploy:
     docker:
       - image: circleci/node
     steps:
       - checkout
+      - attach_workspace:
+          at: ./
       - restore_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
       - run: sudo npm install -g --silent netlify-cli
